--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "asbuild:release": "asc assembly/index.ts --target release",
     "asbuild": "npm run asbuild:debug && npm run asbuild:release",
     "test": "node tests",
-    "start": "npx serve ."
+    "start": "npx serve . -l 58450"
   },
   "dependencies": {
     "@assemblyscript/loader": "^0.27.28"
